# task-list-be

./: .gitignore  README.md  app.py  pyproject.toml  tasks.json
dal/: dal.py
dal/data_sources/: data_source.py  fs_data_source.py
dal/repositories/: repository.py  task_repository.py
models/: task.py
routers/: tasks_router.py
