[tool.poetry]
name = "fastapi-task-server"
version = "0.1.0"
description = "A FastAPI server for managing tasks saved in a JSON file."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.2"
pydantic = "^1.10.5"
uvicorn = "^0.22.0"
pydantic-settings = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"